--- a/index.html
+++ b/index.html
@@ -17,11 +17,24 @@
 
 <body>
   <script src="js/scripts.js"></script>
+
+  div {
+    height: 200px;
+    width: 400px;
+    background: black;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -100px;
+    margin-left: -200px;
+}
   
-<p align=center>  Your first clue is <b>MYSTERY</b> </p>
+<div>  
+<p align=center>  Your first clue is <b>MYSTERY</b>. Use it to decipher the following: </p>
   
 <p align=center>  xjq vcgg bmue pj aj pj hmqncpcqo pj rcit pbe sgqe </p>
-  
+</div>  
   
 </body>
 </html>
