--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
   <script src="js/scripts.js"></script>
 
+  <style media="screen" type="text/css">
   div {
     height: 200px;
     width: 400px;
@@ -29,6 +30,7 @@
     margin-top: -100px;
     margin-left: -200px;
 }
+    </style>
   
 <div>  
 <p align=center>  Your first clue is <b>MYSTERY</b>. Use it to decipher the following: </p>
