--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 }
     body {
       color: white;
-      font-family: Helvetica, Arial, Sans-Serif;
+      font-family: Sans-Serif;
     }
     </style>
   
