--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div>  
 <p align=center>  Your first clue is <b>MYSTERY</b>. Use it to decipher the following: </p>
   
-<p align=center>  xjq vcgg bmue pj aj pj hmqncpcqo pj rcit pbe sgqe </p>
+<p align=center>  xjq vcgg bmue pj aj pj hmqncpcqo pj rcit pbe iewp sgqe </p>
 </div>  
   
 </body>
