--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <style media="screen" type="text/css">
   div {
     height: 200px;
-    width: 400px;
+    width: 500px;
     background: black;
 
     position: fixed;
@@ -27,6 +27,7 @@
 }
     body {
       color: white;
+      size: 14;
       font-family: Sans-Serif;
     }
     </style>
